--- a/SecureWalk/src/app/app.component.html
+++ b/SecureWalk/src/app/app.component.html
@@ -12,6 +12,9 @@
   <button mat-button [matMenuTriggerFor]="menuEncuesta">Encuesta
     <mat-icon>poll</mat-icon>
   </button>
+  <button mat-button [matMenuTriggerFor]="menuIncidentes">Incidentes
+    <mat-icon>poll</mat-icon>
+  </button>
 
 </mat-toolbar>
 <mat-menu #menuUsuario="matMenu">
@@ -34,6 +37,9 @@
 <mat-menu #menuEncuesta="matMenu">
   <button mat-menu-item routerLink="/encuestas">Listar</button>
     <button mat-menu-item routerLink="/encuestas/formulario">Insertar</button>
+</mat-menu>
+<mat-menu #menuIncidentes="matMenu">
+  <button mat-menu-item routerLink="/incidentes">Listar</button>
 </mat-menu>
 
 <router-outlet></router-outlet>
